--- a/index.html
+++ b/index.html
@@ -1,3 +1,42 @@
 <!doctype html>
 <html>
+    <head>
+
+    </head>
+    <body>
+        <span>WebStudio</span>
+                <span>Студия</span>
+                <span>Студия</span>
+                <span>Портфолио</span>
+                <span>Контакты</span>
+                <span>info@devstudio.com</span>
+                        <span>info@devstudio.com</span>
+                    <span>+38 096 111 11 11</span>
+                <span>Эффективные решения для вашего бизнеса</span>
+                    <span>Заказать услугу</span>
+                    <span>Заказать услугу</span>
+                    <span>Внимание к деталям</span>
+                    <span>Идейные соображения, а также начало повседневной работы по формированию позиции.</span>
+                    <span>Пунктуальность</span>
+                    <span>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</span>
+                    <span>Планирование</span>
+                    <span>Равным образом консультация с широким активом в значительной степени обуславливает.</span>
+                    <span>Современные технологии</span>
+                    <span>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</span>
+                <span>Чем мы занимаемся</span>
+                        <span>Игорь Демьяненко</span>
+                        <span>Product Designer</span>
+                        <span>Ольга Репина</span>
+                        <span>Frontend Developer</span>
+                        <span>Николай Тарасов</span>
+                        <span>Marketing</span>
+                        <span>Михаил Ермаков</span>
+                        <span>UI Designer</span>
+                    <span>Наша команда</span>
+                    <span>WebStudio</span>
+                        <span>г. Киев, пр-т Леси Украинки, 26</span>
+                        <span>info@example.com</span>
+                        <span>+38 099 111 11 11</span>
+
+    </body>
 </html>
