--- a/index.html
+++ b/index.html
@@ -4,25 +4,55 @@
 
     </head>
     <body>
-        <span>WebStudio</span>
-                <span>Студия</span>
-                <span>Студия</span>
-                <span>Портфолио</span>
-                <span>Контакты</span>
-                <span>info@devstudio.com</span>
-                        <span>info@devstudio.com</span>
-                    <span>+38 096 111 11 11</span>
-                <span>Эффективные решения для вашего бизнеса</span>
-                    <span>Заказать услугу</span>
-                    <span>Заказать услугу</span>
-                    <span>Внимание к деталям</span>
-                    <span>Идейные соображения, а также начало повседневной работы по формированию позиции.</span>
-                    <span>Пунктуальность</span>
-                    <span>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</span>
-                    <span>Планирование</span>
-                    <span>Равным образом консультация с широким активом в значительной степени обуславливает.</span>
-                    <span>Современные технологии</span>
-                    <span>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</span>
+        <header>
+            <nav>
+                <a href="/">
+                    <img src="./images/WebStudio.svg" alt="WebStudio" width="145" height="31">
+                </a>
+                <ul>
+                    <li><a href="">Студия</a></li>
+                    <li><a href="">Портфолио</a></li>
+                    <li><a href="">Контакты</a></li>
+                </ul>
+            </nav>
+                <ul>
+                    <li><a href="tel:+380961111111">+380 96 111 11 11</a></li>
+                    <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                </ul>
+        </header>
+
+        <main>
+        <div>
+            <section>
+                <h1>Эффективные решения для вашего бизнеса</h1>
+                <button type="button">Заказать услугу</button>
+            </section>
+        </div>
+        </main>
+        <section>
+            <ul>
+                <li>
+                    <h2>Внимание к деталям</h2>
+                    <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                </li>
+                <li>
+                    <h2>Пунктуальность</h2>
+                    <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                </li>
+                <li>
+                    <h2>Планирование</h2>
+                    <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                </li>
+                <li>
+                    <h2>Современные технологии</h2>
+                    <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                </li>
+            </ul>
+        </section>
+        <footer>
+
+        </footer>
+  
                 <span>Чем мы занимаемся</span>
                         <span>Игорь Демьяненко</span>
                         <span>Product Designer</span>
