almost final cut
added images, got done all the page

--- a/index.html
+++ b/index.html
@@ -49,24 +49,30 @@
                 </li>
             </ul>
         </section>
-        <footer>
-
+        <section>
+            <h2>Чем мы занимаемся</h2>
+            <ul> 
+                <li><a href=""><img src="./images/programming.jpg" alt="программирование" width="370"></a></li>
+                <li><a href=""><img src="./images/webaplication.jpg" alt="мобильные приложения" width="370"></a></li>
+                <li><a href=""><img src="./images/design.jpg" alt="дизайн" width="370"></a></li>
+            </ul>
+        </section>
+        <section>
+            <h2>Наша команда</h2>
+            <ul>
+                <li><a href=""><img src="./images/igor.jpg" alt="" width="270"><p>Игорь Демьяненко</p><p>Product Designer</p></a></li>
+                <li><a href=""><img src="./images/olga.jpg" alt="" width="270"><p>Ольга Репина</p><p>Frontend Developer</p></a></li>
+                <li><a href=""><img src="./images/nikolaj.jpg" alt="" width="270"><p>Николай Тарасов</p><p>Marketing</p></a></li>
+                <li><a href=""><img src="./images/nikolaj.jpg" alt="" width="270"><p>Михаил Ермаков</p><p>UI Designer</p></a></li>
+            </ul>
+            <footer>
+        </section>
         </footer>
-  
-                <span>Чем мы занимаемся</span>
-                        <span>Игорь Демьяненко</span>
-                        <span>Product Designer</span>
-                        <span>Ольга Репина</span>
-                        <span>Frontend Developer</span>
-                        <span>Николай Тарасов</span>
-                        <span>Marketing</span>
-                        <span>Михаил Ермаков</span>
-                        <span>UI Designer</span>
-                    <span>Наша команда</span>
                     <span>WebStudio</span>
-                        <span>г. Киев, пр-т Леси Украинки, 26</span>
-                        <span>info@example.com</span>
-                        <span>+38 099 111 11 11</span>
-
+                        <address>г. Киев, пр-т Леси Украинки, 26</address>
+                        <ul>
+                            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                            <li><a href="tel:+380961111111">+380 96 111 11 11</a></li>
+                        </ul>
     </body>
 </html>
