validated by validator
checked by validator

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
-<html>
+<html lang="ru">
     <head>
+        <title>WebStudio - Студия дизайна</title>
 
     </head>
     <body>
@@ -65,14 +66,15 @@
                 <li><a href=""><img src="./images/nikolaj.jpg" alt="" width="270"><p>Николай Тарасов</p><p>Marketing</p></a></li>
                 <li><a href=""><img src="./images/nikolaj.jpg" alt="" width="270"><p>Михаил Ермаков</p><p>UI Designer</p></a></li>
             </ul>
-            <footer>
+            
         </section>
-        </footer>
+        <footer>
                     <span>WebStudio</span>
                         <address>г. Киев, пр-т Леси Украинки, 26</address>
                         <ul>
                             <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
                             <li><a href="tel:+380961111111">+380 96 111 11 11</a></li>
                         </ul>
+        </footer>
     </body>
 </html>
