--- a/index.html
+++ b/index.html
@@ -1,80 +1,131 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="ru">
-    <head>
-        <title>WebStudio - Студия дизайна</title>
+  <head>
+    <title>WebStudio - Студия дизайна</title>
+  </head>
+  <body>
+    <header>
+      <nav>
+        <a href="/"> WebStudio </a>
+        <ul>
+          <li><a href="">Студия</a></li>
+          <li><a href="">Портфолио</a></li>
+          <li><a href="">Контакты</a></li>
+        </ul>
+      </nav>
+      <ul>
+        <li><a href="tel:+380961111111">+380 96 111 11 11</a></li>
+        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+      </ul>
+    </header>
 
-    </head>
-    <body>
-        <header>
-            <nav>
-                <a href="/">
-                    <img src="./images/WebStudio.svg" alt="WebStudio" width="145" height="31">
-                </a>
-                <ul>
-                    <li><a href="">Студия</a></li>
-                    <li><a href="">Портфолио</a></li>
-                    <li><a href="">Контакты</a></li>
-                </ul>
-            </nav>
-                <ul>
-                    <li><a href="tel:+380961111111">+380 96 111 11 11</a></li>
-                    <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                </ul>
-        </header>
-
-        <main>
-        <div>
-            <section>
-                <h1>Эффективные решения для вашего бизнеса</h1>
-                <button type="button">Заказать услугу</button>
-            </section>
-        </div>
-        </main>
+    <main>
+      <div>
         <section>
-            <ul>
-                <li>
-                    <h2>Внимание к деталям</h2>
-                    <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
-                </li>
-                <li>
-                    <h2>Пунктуальность</h2>
-                    <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
-                </li>
-                <li>
-                    <h2>Планирование</h2>
-                    <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
-                </li>
-                <li>
-                    <h2>Современные технологии</h2>
-                    <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
-                </li>
-            </ul>
+          <h1>Эффективные решения для вашего бизнеса</h1>
+          <button type="button">Заказать услугу</button>
         </section>
-        <section>
-            <h2>Чем мы занимаемся</h2>
-            <ul> 
-                <li><a href=""><img src="./images/programming.jpg" alt="программирование" width="370"></a></li>
-                <li><a href=""><img src="./images/webaplication.jpg" alt="мобильные приложения" width="370"></a></li>
-                <li><a href=""><img src="./images/design.jpg" alt="дизайн" width="370"></a></li>
-            </ul>
-        </section>
-        <section>
-            <h2>Наша команда</h2>
-            <ul>
-                <li><a href=""><img src="./images/igor.jpg" alt="" width="270"><p>Игорь Демьяненко</p><p>Product Designer</p></a></li>
-                <li><a href=""><img src="./images/olga.jpg" alt="" width="270"><p>Ольга Репина</p><p>Frontend Developer</p></a></li>
-                <li><a href=""><img src="./images/nikolaj.jpg" alt="" width="270"><p>Николай Тарасов</p><p>Marketing</p></a></li>
-                <li><a href=""><img src="./images/nikolaj.jpg" alt="" width="270"><p>Михаил Ермаков</p><p>UI Designer</p></a></li>
-            </ul>
-            
-        </section>
-        <footer>
-                    <span>WebStudio</span>
-                        <address>г. Киев, пр-т Леси Украинки, 26</address>
-                        <ul>
-                            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                            <li><a href="tel:+380961111111">+380 96 111 11 11</a></li>
-                        </ul>
-        </footer>
-    </body>
+      </div>
+    </main>
+    <section>
+      <ul>
+        <li>
+          <h2>Внимание к деталям</h2>
+          <p>
+            Идейные соображения, а также начало повседневной работы по
+            формированию позиции.
+          </p>
+        </li>
+        <li>
+          <h2>Пунктуальность</h2>
+          <p>
+            Задача организации, в особенности же рамки и место обучения кадров
+            влечет за собой.
+          </p>
+        </li>
+        <li>
+          <h2>Планирование</h2>
+          <p>
+            Равным образом консультация с широким активом в значительной степени
+            обуславливает.
+          </p>
+        </li>
+        <li>
+          <h2>Современные технологии</h2>
+          <p>
+            Значимость этих проблем настолько очевидна, что реализация плановых
+            заданий.
+          </p>
+        </li>
+      </ul>
+    </section>
+    <section>
+      <h2>Чем мы занимаемся</h2>
+      <ul>
+        <li>
+          <a href=""
+            ><img
+              src="./images/programming.jpg"
+              alt="программирование"
+              width="370"
+          /></a>
+        </li>
+        <li>
+          <a href=""
+            ><img
+              src="./images/webaplication.jpg"
+              alt="мобильные приложения"
+              width="370"
+          /></a>
+        </li>
+        <li>
+          <a href=""
+            ><img src="./images/design.jpg" alt="дизайн" width="370"
+          /></a>
+        </li>
+      </ul>
+    </section>
+    <section>
+      <h2>Наша команда</h2>
+      <ul>
+        <li>
+          <a href=""
+            ><img src="./images/igor.jpg" alt="" width="270" />
+            <p>Игорь Демьяненко</p>
+            <p>Product Designer</p></a
+          >
+        </li>
+        <li>
+          <a href=""
+            ><img src="./images/olga.jpg" alt="" width="270" />
+            <p>Ольга Репина</p>
+            <p>Frontend Developer</p></a
+          >
+        </li>
+        <li>
+          <a href=""
+            ><img src="./images/nikolaj.jpg" alt="" width="270" />
+            <p>Николай Тарасов</p>
+            <p>Marketing</p></a
+          >
+        </li>
+        <li>
+          <a href=""
+            ><img src="./images/mikhail.jpg" alt="" width="270" />
+            <p>Михаил Ермаков</p>
+            <p>UI Designer</p></a
+          >
+        </li>
+      </ul>
+    </section>
+    <footer>
+      <a href="/"> WebStudio </a>
+      <address>г. Киев, пр-т Леси Украинки, 26</address>
+      <ul>
+        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a href="tel:+380961111111">+380 96 111 11 11</a></li>
+      </ul>
+    </footer>
+  </body>
 </html>
+
