formatting with Prittier
Formatted with Prittier plugging

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
     </header>
 
     <main>
-        <section>
-          <h1>Эффективные решения для вашего бизнеса</h1>
-          <button type="button">Заказать услугу</button>
-        </section>
+      <section>
+        <h1>Эффективные решения для вашего бизнеса</h1>
+        <button type="button">Заказать услугу</button>
+      </section>
     </main>
     <section>
       <ul>
@@ -62,21 +62,20 @@
       <ul>
         <li>
           <img
-              src="./images/programming.jpg"
-              alt="программирование"
-              width="370"
+            src="./images/programming.jpg"
+            alt="программирование"
+            width="370"
           />
         </li>
         <li>
           <img
-              src="./images/webaplication.jpg"
-              alt="мобильные приложения"
-              width="370"
+            src="./images/webaplication.jpg"
+            alt="мобильные приложения"
+            width="370"
           />
         </li>
         <li>
-          <img src="./images/design.jpg" alt="дизайн" width="370"
-          />
+          <img src="./images/design.jpg" alt="дизайн" width="370" />
         </li>
       </ul>
     </section>
@@ -85,23 +84,23 @@
       <ul>
         <li>
           <img src="./images/igor.jpg" alt="" width="270" />
-            <h3>Игорь Демьяненко</h3>
-            <p>Product Designer</p>
+          <h3>Игорь Демьяненко</h3>
+          <p>Product Designer</p>
         </li>
         <li>
           <img src="./images/olga.jpg" alt="" width="270" />
-            <h3>Ольга Репина</h3>
-            <p>Frontend Developer</p>
+          <h3>Ольга Репина</h3>
+          <p>Frontend Developer</p>
         </li>
         <li>
           <img src="./images/nikolaj.jpg" alt="" width="270" />
-            <h3>Николай Тарасов</h3>
-            <p>Marketing</p>
+          <h3>Николай Тарасов</h3>
+          <p>Marketing</p>
         </li>
         <li>
           <img src="./images/mikhail.jpg" alt="" width="270" />
-            <h3>Михаил Ермаков</h3>
-            <p>UI Designer</p>
+          <h3>Михаил Ермаков</h3>
+          <p>UI Designer</p>
         </li>
       </ul>
     </section>
@@ -115,4 +114,3 @@
     </footer>
   </body>
 </html>
-
